tree-sitter/test/corpus/error-handling.txt
================================================================================
Basic error creation
================================================================================

vibe main

slay test() {
    yikes err := "something went wrong"
    vibez.spill(err)
}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (identifier))
  (top_level_declaration
    (function_declaration
      name: (identifier)
      (signature
        (parameters))
      (block
        (statement
          (error_statement
            variable: (identifier)
            value: (expression
              (unary_expression
                (primary_expression
                  (operand
                    (literal
                      (basic_literal
                        (string_literal)))))))))
        (statement
          (expression_statement
            (expression
              (unary_expression
                (primary_expression
                  (call_expression
                    function: (primary_expression
                      (selector_expression
                        operand: (primary_expression
                          (operand
                            (identifier)))
                        field: (identifier)))
                    arguments: (argument_list
                      (expression_list
                        (expression
                          (unary_expression
                            (primary_expression
                              (operand
                                (identifier)))))))))))))))))

================================================================================
Error propagation
================================================================================

vibe main

slay risky() normie {
    damn dangerous_operation()
}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (identifier))
  (top_level_declaration
    (function_declaration
      name: (identifier)
      (signature
        (parameters)
        (type
          (type_name
            (builtin_type))))
      (block
        (statement
          (return_statement
            (expression_list
              (expression
                (unary_expression
                  (primary_expression
                    (call_expression
                      function: (primary_expression
                        (operand
                          (identifier)))
                      arguments: (argument_list))))))))))))

================================================================================
Error recovery with fam
================================================================================

vibe main

slay test() {
    fam err {
        risky_operation()
        another_risky_call()
    } otherwise {
        vibez.spill("Recovery successful")
    }
}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (identifier))
  (top_level_declaration
    (function_declaration
      name: (identifier)
      (signature
        (parameters))
      (block
        (statement
          (recovery_statement
            (ERROR
              (UNEXPECTED 'r'))
            body: (block
              (statement
                (expression_statement
                  (expression
                    (unary_expression
                      (primary_expression
                        (call_expression
                          function: (primary_expression
                            (operand
                              (identifier)))
                          arguments: (argument_list)))))))
              (statement
                (expression_statement
                  (expression
                    (unary_expression
                      (primary_expression
                        (call_expression
                          function: (primary_expression
                            (operand
                              (identifier)))
                          arguments: (argument_list))))))))
            recovery_body: (block
              (statement
                (expression_statement
                  (expression
                    (unary_expression
                      (primary_expression
                        (call_expression
                          function: (primary_expression
                            (selector_expression
                              operand: (primary_expression
                                (operand
                                  (identifier)))
                              field: (identifier)))
                          arguments: (argument_list
                            (expression_list
                              (expression
                                (unary_expression
                                  (primary_expression
                                    (operand
                                      (literal
                                        (basic_literal
                                          (string_literal))))))))))))))))))))))

================================================================================
Complex error handling
================================================================================

vibe main

slay complex_error_handling() {
    yikes primary_err := "initial error"
    
    fam recovery_err {
        yikes nested_err := process_data()
        vibez.spill(nested_err)
    } otherwise {
        vibez.spill("All errors handled")
    }
}

--------------------------------------------------------------------------------

(source_file
  (package_clause
    name: (identifier))
  (top_level_declaration
    (function_declaration
      name: (identifier)
      (signature
        (parameters))
      (block
        (statement
          (error_statement
            variable: (identifier)
            value: (expression
              (unary_expression
                (primary_expression
                  (operand
                    (literal
                      (basic_literal
                        (string_literal)))))))))
        (statement
          (recovery_statement
            (ERROR
              (UNEXPECTED 'c'))
            body: (block
              (statement
                (error_statement
                  variable: (identifier)
                  value: (expression
                    (unary_expression
                      (primary_expression
                        (call_expression
                          function: (primary_expression
                            (operand
                              (identifier)))
                          arguments: (argument_list)))))))
              (statement
                (expression_statement
                  (expression
                    (unary_expression
                      (primary_expression
                        (call_expression
                          function: (primary_expression
                            (selector_expression
                              operand: (primary_expression
                                (operand
                                  (identifier)))
                              field: (identifier)))
                          arguments: (argument_list
                            (expression_list
                              (expression
                                (unary_expression
                                  (primary_expression
                                    (operand
                                      (identifier))))))))))))))
            recovery_body: (block
              (statement
                (expression_statement
                  (expression
                    (unary_expression
                      (primary_expression
                        (call_expression
                          function: (primary_expression
                            (selector_expression
                              operand: (primary_expression
                                (operand
                                  (identifier)))
                              field: (identifier)))
                          arguments: (argument_list
                            (expression_list
                              (expression
                                (unary_expression
                                  (primary_expression
                                    (operand
                                      (literal
                                        (basic_literal
                                          (string_literal))))))))))))))))))))))
